--- a/arithmetic/build.gradle
+++ b/arithmetic/build.gradle
@@ -63,7 +63,7 @@ jar {
                 'Specification-Version': project.version,
                 'Implementation-Title': archiveBaseName,
                 'Implementation-Version': project.version,
-                'Automatic-Module-Name': 'org.hyperledger.besu.native.arithmetic'
+                'Automatic-Module-Name': 'org.hyperledger.besu.nativelib.arithmetic'
         )
     }
 }
