--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           export CARGO_HOME="$HOME/.cargo"
           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.68.2
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: Build
@@ -72,7 +72,7 @@ jobs:
       SKIP_GRADLE: true
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: Build
@@ -129,7 +129,7 @@ jobs:
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: Build
@@ -167,7 +167,7 @@ jobs:
           name: gnark native build artifacts
           path: gnark/build/
   native-build-m1:
-    runs-on: [self-hosted, macOS, ARM64, MacStadium]
+    runs-on: macos-13-xlarge
     env:
       SKIP_GRADLE: true
     steps:
@@ -195,15 +195,19 @@ jobs:
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: adopt
           java-version: 17
           cache: gradle
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
       - name: Build
         run: |
           export HOMEBREW_BIN=${{ env.HOMEBREW_BIN }}
@@ -250,7 +254,7 @@ jobs:
       - native-build-linux-arm64
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Download altbn128
         uses: actions/download-artifact@v3
         with:
@@ -292,7 +296,7 @@ jobs:
           name: gnark native build artifacts
           path: gnark/build/
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: adopt
           java-version: 17
