--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -20,36 +20,21 @@ plugins {
 }
 
 dependencies {
-  implementation 'net.java.dev.jna:jna:5.12.1'
-  testImplementation 'org.apache.tuweni:tuweni-bytes:2.2.0'
-  testImplementation 'junit:junit:4.13.2'
-  testImplementation 'org.assertj:assertj-core:3.22.0'
-  testImplementation 'org.mockito:mockito-core:4.4.0'
+    implementation "com.google.guava:guava:16+"
+    implementation 'net.java.dev.jna:jna:5.12.1'
+    implementation 'org.apache.tuweni:tuweni-bytes:2.3.1'
+    implementation 'org.apache.tuweni:tuweni-units:2.3.1'
+    implementation 'org.apache.tuweni:tuweni-rlp:2.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
-task macArmLibCopy(type: Copy) {
-  from 'build/darwin-aarch64/lib/libipa_multipoint_jni.dylib'
-  into 'build/resources/main/darwin-aarch64'
+test {
+  useJUnitPlatform()
 }
-processResources.dependsOn macArmLibCopy
-
-task macLibCopy(type: Copy) {
-  from 'build/darwin-x86-64/lib/libipa_multipoint_jni.dylib'
-  into 'build/resources/main/darwin-x86-64'
-}
-processResources.dependsOn macLibCopy
-
-task linuxLibCopy(type: Copy) {
-  from 'build/linux-gnu-x86_64/lib/libipa_multipoint_jni.so'
-  into 'build/resources/main/linux-x86-64'
-}
-processResources.dependsOn linuxLibCopy
-
-task linuxArm64LibCopy(type: Copy) {
-  from 'build/linux-gnu-aarch64/lib/libipa_multipoint_jni.so'
-  into 'build/resources/main/linux-aarch64'
-}
-processResources.dependsOn linuxArm64LibCopy
 
 jar {
   archiveBaseName = 'besu-native-ipa-multipoint'
@@ -60,7 +45,7 @@ jar {
         'Specification-Version': project.version,
         'Implementation-Title': archiveBaseName,
         'Implementation-Version': project.version,
-        'Automatic-Module-Name': 'org.hyperledger.besu.nativelib.ipa.multipoint'
+        'Automatic-Module-Name': 'org.hyperledger.besu.native.ipa.multipoint'
     )
   }
 }
@@ -76,7 +61,6 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
   classifier = 'javadoc'
   from javadoc.destinationDir
 }
-
 
 publishing {
   publications {
@@ -129,4 +113,3 @@ artifactory {
     }
   }
 }
-
