--- a/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
+++ b/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
@@ -21,20 +21,16 @@ authors = ["Antoine Toulme <antoine@lunar-ocean.com>"]
 repository = "https://github.com/hyperledger/besu-native"
 edition = "2018"
 
+
 [dependencies]
-verkle-spec = { git = "https://github.com/crate-crypto/rust-verkle", branch = "master" }
-verkle-trie = { git = "https://github.com/crate-crypto/rust-verkle", branch = "master" }
-ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", branch = "banderwagon_migration" }
-banderwagon = { git = "https://github.com/crate-crypto/banderwagon" }
-bandersnatch = "0.1.1"
-ark-ff = { version = "^0.3.0", default-features = false }
-ark-ec = { version = "^0.3.0", default-features = false }
-ark-serialize = { version = "^0.3.0", default-features = false }
-ark-std = { version = "^0.3.0", default-features = false }
+ipa-multipoint = { git = "https://github.com/dragan2234/rust-verkle" }
+banderwagon = { git = "https://github.com/dragan2234/rust-verkle" }
+ark-ff = { version = "^0.4.0", default-features = false }
+ark-serialize = { version = "^0.4.2", default-features = false }
 jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
 hex = "0.4.3"
 num-bigint = "0.4.4"
-
+once_cell = "1.8.0"
 
 [lib]
 name = "ipa_multipoint_jni"
