--- a/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
+++ b/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
@@ -22,21 +22,14 @@ repository = "https://github.com/hyperledger/besu-native"
 edition = "2018"
 
 [dependencies]
-verkle-spec = { git = "https://github.com/crate-crypto/rust-verkle", rev = "67d47d9e78f873da7c9e72687158468041059b5d" }
-verkle-trie = { git = "https://github.com/crate-crypto/rust-verkle", rev = "67d47d9e78f873da7c9e72687158468041059b5d" }
-ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", branch = "banderwagon_migration" }
-banderwagon = { git = "https://github.com/crate-crypto/banderwagon" }
-bandersnatch = "0.1.1"
-ark-ff = { version = "^0.3.0", default-features = false }
-ark-ec = { version = "^0.3.0", default-features = false }
-ark-serialize = { version = "^0.3.0", default-features = false }
-ark-std = { version = "^0.3.0", default-features = false }
+ffi_interface = { git = "https://github.com/crate-crypto/rust-verkle", rev = "13dd7e9b4cb4491230fb0bda1759ef9c62938f28" }
+ipa-multipoint = { git = "https://github.com/crate-crypto/rust-verkle", rev = "13dd7e9b4cb4491230fb0bda1759ef9c62938f28" }
 jni = { version = "0.19.0", features = [
     "invocation",
 ] } # We use invocation in tests.
 hex = "0.4.3"
 num-bigint = "0.4.4"
-
+once_cell = "1.19.0"
 
 [lib]
 name = "ipa_multipoint_jni"
