--- a/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
+++ b/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
@@ -28,6 +28,7 @@ banderwagon = { git = "https://github.com/crate-crypto/rust-verkle", rev = "bb5a
 ipa-multipoint = { git = "https://github.com/crate-crypto/rust-verkle", rev = "bb5af2f2fe9788d49d2896b9614a3125f8227818" }
 once_cell = "1.19.0"
 jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
+rlp = "0.5.2"
 
 [lib]
 name = "ipa_multipoint_jni"
