FIX: javadocs and rust-verkle revision
Signed-off-by: Thomas Zamojski <thomas.zamojski@quadratic-labs.com>

--- a/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
+++ b/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
@@ -22,7 +22,7 @@ repository = "https://github.com/hyperledger/besu-native"
 edition = "2018"
 
 [dependencies]
-ffi_interface = { git = "https://github.com/crate-crypto/rust-verkle", branch = "master" }
+ffi_interface = { git = "https://github.com/crate-crypto/rust-verkle", rev = "7688f0aedfb147d3d391abfe8495e46c46d72ce0" }
 jni = { version = "0.19.0", features = [
     "invocation",
 ] } # We use invocation in tests.
