--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -341,7 +341,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         if: contains('refs/heads/release-', github.ref) || github.ref == 'refs/heads/main'
         env:
-          ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER}}
-          ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY }}
+          ARTIFACTORY_USER: ${{ secrets.BESU_ARTIFACTORY_USER }}
+          ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY_TOKEN }}
         with:
           arguments: --no-daemon --parallel publish artifactoryPublish --scan
