--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/bitcoin-core/secp256k1.git
 [submodule "bls12-381/updated-eip1962"]
 	path = bls12-381/updated-eip1962
-	url = https://github.com/garyschulte/eip1962.git
+	url = git@github.com:shemnon/matterlabs_eip1962.git
 [submodule "secp256r1/besu-native-ec"]
 	path = secp256r1/besu-native-ec
 	url = git@github.com:ConsenSys/besu-native-ec.git
