--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,13 @@
 allprojects {
   apply plugin: 'java-library'
 
-  sourceCompatibility = 11
-  targetCompatibility = 11
+  sourceCompatibility = 17
+  targetCompatibility = 17
 
   repositories {
     mavenCentral()
+    maven {
+      url "https://artifacts.consensys.net/public/maven/maven/"
+    }
   }
 }
