Use github arm64 runners
See: https://github.com/hyperledger/besu/pull/7173

Signed-off-by: Sean Young <sean@mess.org>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
           name: gnark native build artifacts
           path: gnark/build/
   native-build-linux-arm64:
-    runs-on: [self-hosted, Linux, ARM64]
+    runs-on: besu-arm64
     env:
       SKIP_GRADLE: true
     steps:
