shim gnark eip-2537 implementation for drop-in replacement for matter-labs add gnark eip-196 implementation and tests add tests to matter-labs eip-196 for comparison TODO: gnark eip-197 pairing currently failing
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/gnark/build.gradle
+++ b/gnark/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 task macArmLibCopy(type: Copy) {
     from 'build/darwin-aarch64/lib/libgnark_jni.dylib'
     from 'build/darwin-aarch64/lib/libgnark_eip_2537.dylib'
+    from 'build/darwin-aarch64/lib/libgnark_eip_196.dylib'
     into 'build/resources/main/darwin-aarch64'
 }
 processResources.dependsOn macArmLibCopy
@@ -38,6 +39,7 @@ processResources.dependsOn macArmLibCopy
 task macLibCopy(type: Copy) {
     from 'build/darwin-x86-64/lib/libgnark_jni.dylib'
     from 'build/darwin-x86-64/lib/libgnark_eip_2537.dylib'
+    from 'build/darwin-x86-64/lib/libgnark_eip_196.dylib'
     into 'build/resources/main/darwin-x86-64'
 }
 processResources.dependsOn macLibCopy
@@ -45,6 +47,7 @@ processResources.dependsOn macLibCopy
 task linuxLibCopy(type: Copy) {
     from 'build/linux-gnu-x86_64/lib/libgnark_jni.so'
     from 'build/linux-gnu-x86_64/lib/libgnark_eip_2537.so'
+    from 'build/linux-gnu-x86_64/lib/libgnark_eip_196.so'
     into 'build/resources/main/linux-x86-64'
 }
 processResources.dependsOn linuxLibCopy
@@ -52,6 +55,7 @@ processResources.dependsOn linuxLibCopy
 task linuxArm64LibCopy(type: Copy) {
     from 'build/linux-gnu-aarch64/lib/libgnark_jni.so'
     from 'build/linux-gnu-aarch64/lib/libgnark_eip_2537.so'
+    from 'build/linux-gnu-aarch64/lib/libgnark_eip_196.so'
     into 'build/resources/main/linux-aarch64'
 }
 processResources.dependsOn linuxArm64LibCopy
