--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: Build and publish
 
 on:
-  workflow_dispatch:
-  pull_request:
+  # pull_request:
   push:
     branches:
       - main
+      - release-*
 
 jobs:
   native-build-linux-x86-64:
@@ -340,7 +340,7 @@ jobs:
           path: gnark/build/libs
       - name: gradle publish
         uses: gradle/gradle-build-action@v2
-        if: contains('refs/heads/release-', github.ref) || github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/pull/176/merge' || github.ref == 'refs/heads/main'
         env:
           ARTIFACTORY_USER: ${{ secrets.BESU_ARTIFACTORY_USER }}
           ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY_TOKEN }}
