--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -339,7 +339,7 @@ jobs:
           path: gnark/build/libs
       - name: gradle publish
         uses: gradle/gradle-build-action@v2
-        if: contains('refs/heads/release-', github.ref) || github.ref == 'refs/heads/main'
+        if: contains(github.ref, 'refs/heads/release-') || github.ref == 'refs/heads/main'
         env:
           ARTIFACTORY_USER: ${{ secrets.BESU_ARTIFACTORY_USER }}
           ARTIFACTORY_KEY: ${{ secrets.BESU_ARTIFACTORY_TOKEN }}
