--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -63,13 +63,13 @@ jar {
 
 task sourcesJar(type: Jar, dependsOn: classes) {
   archiveBaseName = 'besu-native-secp256k1'
-  classifier = 'sources'
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
   archiveBaseName = 'besu-native-secp256k1'
-  classifier = 'javadoc'
+  archiveClassifier = 'javadoc'
   from javadoc.destinationDir
 }
 
