Implement EIP-2537 using gnark-crypto (#168)
* implement EIP-2537 and EIP-196 with gnark-crypto
* shim gnark-crypt implementation for drop-in replacement for matter-labs
* add additional test vectors for eip-196 and eip-2537
* bump to java21 and gradle 8.8, bump version to 0.9.0-SNAPSHOT
* use gnark-crypto PR 510 until gnark-crypto is released
* rebase and bump GHA to java 21

Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,13 @@
 allprojects {
   apply plugin: 'java-library'
 
-  sourceCompatibility = 11
-  targetCompatibility = 11
+  sourceCompatibility = 21
+  targetCompatibility = 21
 
   repositories {
     mavenCentral()
+    maven {
+      url "https://artifacts.consensys.net/public/maven/maven/"
+    }
   }
 }
