--- a/gnark/build.gradle
+++ b/gnark/build.gradle
@@ -30,24 +30,32 @@ dependencies {
 
 task macArmLibCopy(type: Copy) {
     from 'build/darwin-aarch64/lib/libgnark_jni.dylib'
+    from 'build/darwin-aarch64/lib/libgnark_eip_2537.dylib'
+    from 'build/darwin-aarch64/lib/libgnark_eip_196.dylib'
     into 'build/resources/main/darwin-aarch64'
 }
 processResources.dependsOn macArmLibCopy
 
 task macLibCopy(type: Copy) {
     from 'build/darwin-x86-64/lib/libgnark_jni.dylib'
+    from 'build/darwin-x86-64/lib/libgnark_eip_2537.dylib'
+    from 'build/darwin-x86-64/lib/libgnark_eip_196.dylib'
     into 'build/resources/main/darwin-x86-64'
 }
 processResources.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
     from 'build/linux-gnu-x86_64/lib/libgnark_jni.so'
+    from 'build/linux-gnu-x86_64/lib/libgnark_eip_2537.so'
+    from 'build/linux-gnu-x86_64/lib/libgnark_eip_196.so'
     into 'build/resources/main/linux-x86-64'
 }
 processResources.dependsOn linuxLibCopy
 
 task linuxArm64LibCopy(type: Copy) {
     from 'build/linux-gnu-aarch64/lib/libgnark_jni.so'
+    from 'build/linux-gnu-aarch64/lib/libgnark_eip_2537.so'
+    from 'build/linux-gnu-aarch64/lib/libgnark_eip_196.so'
     into 'build/resources/main/linux-aarch64'
 }
 processResources.dependsOn linuxArm64LibCopy
@@ -68,13 +76,13 @@ jar {
 
 task sourcesJar(type: Jar, dependsOn: classes) {
     archiveBaseName = 'besu-native-gnark'
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     archiveBaseName = 'besu-native-gnark'
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
