fix implied deps error gradle publish task is complaining about
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/altbn128/build.gradle
+++ b/altbn128/build.gradle
@@ -27,25 +27,25 @@ task macArmLibCopy(type: Copy) {
   from 'build/darwin-aarch64/lib/libeth_altbn128.dylib'
   into 'build/resources/main/darwin-aarch64'
 }
-jar.dependsOn macArmLibCopy
+processResources.dependsOn macArmLibCopy
 
 task macLibCopy(type: Copy) {
   from 'build/darwin-x86-64/lib/libeth_altbn128.dylib'
   into 'build/resources/main/darwin-x86-64'
 }
-jar.dependsOn macLibCopy
+processResources.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
   from 'build/linux-gnu-x86_64/lib/libeth_altbn128.so'
   into 'build/resources/main/linux-x86-64'
 }
-jar.dependsOn linuxLibCopy
+processResources.dependsOn linuxLibCopy
 
 task linuxArm64LibCopy(type: Copy) {
   from 'build/linux-gnu-aarch64/lib/libeth_altbn128.so'
   into 'build/resources/main/linux-aarch64'
 }
-jar.dependsOn linuxArm64LibCopy
+processResources.dependsOn linuxArm64LibCopy
 
 jar {
   archiveBaseName = 'besu-native-altbn128'
