--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright ConsenSys AG.
+ * Copyright Hyperledger Besu contributors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -23,7 +23,7 @@ dependencies {
   implementation 'net.java.dev.jna:jna:5.12.1'
   testImplementation 'com.google.guava:guava:31.1-jre'
   testImplementation 'junit:junit:4.13.2'
-  testImplementation 'org.apache.tuweni:tuweni-bytes:2.2.0'
+  testImplementation 'io.tmio:tuweni-bytes:2.4.2'
   testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
