--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -21,7 +21,7 @@ plugins {
 
 dependencies {
     implementation 'net.java.dev.jna:jna:5.12.1'
-    testImplementation 'org.apache.tuweni:tuweni-bytes:2.3.1'
+  testImplementation 'io.tmio:tuweni-bytes:2.4.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
