--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,10 @@ jobs:
           # rust dependencies
           export CARGO_HOME="$HOME/.cargo"
           curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.75.0
+          # nim dependencies
+          wget https://nim-lang.org/download/nim-2.0.4-linux_x64.tar.xz
+          tar -xJf nim-2.0.4-linux_x64.tar.xz
+          export PATH=$(pwd)/nim-2.0.4/bin:$PATH
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
@@ -66,6 +70,7 @@ jobs:
         with:
           name: gnark native build artifacts
           path: gnark/build/
+
   native-build-linux-arm64:
     runs-on: besu-arm64
     env:
@@ -76,8 +81,12 @@ jobs:
         with:
           submodules: recursive
       - name: Build
-        run:
+        run: |
           docker run -e SKIP_GRADLE=$SKIP_GRADLE -v $(pwd):/home/ubuntu ubuntu:20.04 /home/ubuntu/native-build.sh
+          # nim dependencies
+          wget https://nim-lang.org/download/nim-2.0.4-linux_arm64.tar.xz
+          tar -xJf nim-2.0.4-linux_arm64.tar.xz
+          export PATH=$(pwd)/nim-2.0.4/bin:$PATH
       - uses: actions/upload-artifact@v3.1.0
         with:
           name: altbn128 native build artifacts
@@ -110,6 +119,7 @@ jobs:
         with:
           name: gnark native build artifacts
           path: gnark/build/
+
   native-build-macos:
     runs-on: macos-13
     env:
@@ -128,6 +138,8 @@ jobs:
           export PATH="$HOME/.cargo/bin:$PATH"
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
+          # nim dependencies
+          brew install nim@2.0.4
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
@@ -166,6 +178,7 @@ jobs:
         with:
           name: gnark native build artifacts
           path: gnark/build/
+
   native-build-m1:
     runs-on: macos-13-xlarge
     env:
@@ -194,6 +207,8 @@ jobs:
           export PATH="$HOME/.cargo/bin:$PATH"
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
+          # nim dependencies
+          brew install nim@2.0.4
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
@@ -245,6 +260,7 @@ jobs:
         with:
           name: gnark native build artifacts
           path: gnark/build/
+
   final-assembly:
     runs-on: ubuntu-20.04
     needs:
